# target-ai

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  README.md  README_NEW.md  RENDER_UPDATE_INSTRUCTIONS.md  SECURITY_EMERGENCY.md  UPDATE_TOKEN.md  bot.py  check_token_update.py  cleanup_project.py  flask_app.py  preview_cleanup.py  pyproject.toml  render.yaml  requirements.txt  requirements.txt.new  setup.py  target_ai_api.py  telegram_bot.py  telegram_bot_v2.py  test_advanced_media.py  test_bot_integration.py  test_bot_production.py  test_fixed_integration.py  test_new_token.py  test_openai_connection.py  test_production_ai.py  test_simple_bot.py  test_telegram_bot.py
app/: .env.example  auth.py  chatgpt.py  config.py  logger.py  main.py  models.py  routes.py  schemas.py  simple_main.py  telegram_integration.py  utils.py
app/bot/: bot.py  handlers.py
app/db/: database.py  init_db.py  models.py
app/routers/: ai_services.py  facebook.py  telegram.py
app/services/: budget_optimizer.py  campaign_automation.py  facebook_ads.py  facebook_service.py  media_analysis.py
docs/: DEPLOYMENT_FIX.md  GIT_STATUS.md  OPTIMIZATION_RESULTS.md  RENDER_SETUP.md  SECURITY_ALERT.md  SOLUTION.md
scripts/: analyze_project.py  check_new_token.py  emergency_token_rotation.py
tests/: check_after_setup.py  check_deploy_status.py  check_env_vars.py  test_api.py  test_database.py  test_db.py  test_media_analysis.py  test_real_openai.py
